<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".ActivityWaterConsumption">

    <ImageView
        android:id="@+id/iHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/iFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/iLogo"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="50sp"
        app:layout_constraintBottom_toTopOf="@id/tV21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hidrologo" />

    <TextView
        android:id="@+id/tV21"
        style="@style/style_tittle"
        android:text="@string/consumption2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iLogo" />

    <EditText
        android:id="@+id/eT21"
        style="@style/style_editText"
        android:layout_marginTop="50sp"
        android:hint="@string/type2"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tV21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        />

    <Button
        android:id="@+id/btn2"
        style="@style/style_button"
        android:layout_marginTop="30sp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT21" />

    <Button
        android:id="@+id/btn21"
        style="@style/style_button"
        android:layout_marginTop="30sp"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>